--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+    
     <head>
         <title>About Me</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -18,7 +19,6 @@
                         <ul class="name-job-list">
                                     <li>Student</li>
                                     <li>Developer</li>
-                                    <li>Designer</li>
                                     <li>Nigga</li>
                                     <li>Student</li>
                         </ul>
@@ -33,9 +33,9 @@
                      aliquet et massa a, semper commodo nibh. Nunc finibus dui tristique sodales mattis. 
                      Quisque tristique euismod laoreet. Maecenas vitae facilisis felis.</p>
                      <div class="icons">
-                         <a class="linkedin" href="">LinkedIn</a>
-                         <a class= "github" href="">Github</a>
-                         <a class="instagram" href="">instagram</a>
+                         <a class="linkedin" href="https://www.linkedin.com/in/james-park-72a061198/">LinkedIn</a>
+                         <a class= "github" href="https://github.com/jamesjpark">Github</a>
+                         <a class="instagram" href="https://www.instagram.com/joonha_national_park/">instagram</a>
                      </div>
             </div>
             <div class = "profile-section">
