--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>About Me</title>
+        <title>James Park</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="stylesheet" href="style.css">
@@ -17,8 +17,8 @@
                     <div class = "name-job">
                         <ul class="name-job-list">
                                     <li>Student</li>
+                                    <li>멋있는</li>
                                     <li>Developer</li>
-                                    <li>Nigga</li>
                                     <li>Student</li>
                         </ul>
                     </div>
@@ -43,17 +43,28 @@
                     <li>
                         <h3>University of Texas at Austin, 2019-2023</h3>
                         <h4>Electrical/Computer Engineering</h4>
+                        <p>lorem ipsum......</p>
                     </li>
                 </ul>
                 ...
             </div>
             <div class = "profile-section">
                     <h2>Work Experience/Skills</h2>
-                    ...
+                    <ul class = "graph">
+                        <li data-levels="80%"><h3>Java<h3></li>
+                        <li data-levels="70%"><h3>HTML + CSS</h3></li>
+                        <li data-levels="70%"><h3>Assembly<h3></li>
+                        <li data-levels="50%"><h3>Python</h3></li>
+
+                    </ul>
             </div>
             <div class = "profile-section">
                     <h2>Contacts</h2>
-                    ...
+                    <p>Phone : 1+(512)-629-6811<br><br>
+                        Email : jamesjpark31@gmail.com<br>
+
+                    </p>
+
             </div>
         </div>
     </body>
