--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <div class = "name-job">
                         <ul class="name-job-list">
                                     <li>Student</li>
-                                    <li>멋있는</li>
                                     <li>Developer</li>
+                                    <li>Nigga</li>
                                     <li>Student</li>
                         </ul>
                     </div>
@@ -40,30 +40,32 @@
             <div class = "profile-section">
                 <h2>Education</h2>
                 <ul>
-                    <li>
+                    <li class = "intro">
                         <h3>University of Texas at Austin, 2019-2023</h3>
                         <h4>Electrical/Computer Engineering</h4>
                         <p>lorem ipsum......</p>
                     </li>
                 </ul>
-                ...
+                
             </div>
             <div class = "profile-section">
                     <h2>Work Experience/Skills</h2>
                     <ul class = "graph">
-                        <li data-levels="80%"><h3>Java<h3></li>
-                        <li data-levels="70%"><h3>HTML + CSS</h3></li>
-                        <li data-levels="70%"><h3>Assembly<h3></li>
-                        <li data-levels="50%"><h3>Python</h3></li>
-
+                        <li data-score = "80%"></span><h3>Java<h3></li>
+                        <li data-score = "80%"></span><h3>HTML+CSS<h3></li>                  
+                        <li data-score = "70%"></span><h3>Assembly<h3></li>
+                        <li data-score = "60%"></span><h3>Javascript<h3></li>
                     </ul>
             </div>
             <div class = "profile-section">
                     <h2>Contacts</h2>
-                    <p>Phone : 1+(512)-629-6811<br><br>
-                        Email : jamesjpark31@gmail.com<br>
-
-                    </p>
+                    <dl class = "list">
+                        <dt>Phone</dt>
+                        <dd>+1)5126296811</dd>
+                        <dt>Email</dt>
+                        <dd>jamesjpark31@gmail.com</dd>
+                    </dl>
+                    
 
             </div>
         </div>
