--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                     <li class = "intro">
                         <h3>University of Texas at Austin, 2019-2023</h3>
                         <h4>Electrical/Computer Engineering</h4>
-                        <p>lorem ipsum......</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed leo porttitor, 
+                            placerat lacus at, ornare est. Cras placerat, nulla ut elementum mollis, quam metus suscipit risus, 
+                            eu faucibus mauris nulla et dui. In at eros sem. Curabitur nec dolor felis. Phasellus leo nisl,
+                             aliquet et massa a, semper commodo nibh. Nunc finibus dui tristique sodales mattis. 
+                             Quisque tristique euismod laoreet. Maecenas vitae facilisis felis.</p>
                     </li>
                 </ul>
                 
@@ -56,6 +60,13 @@
                         <li data-score = "70%"></span><h3>Assembly<h3></li>
                         <li data-score = "60%"></span><h3>Javascript<h3></li>
                     </ul>
+                    <p>
+                        orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed leo porttitor, 
+                    placerat lacus at, ornare est. Cras placerat, nulla ut elementum mollis, quam metus suscipit risus, 
+                    eu faucibus mauris nulla et dui. In at eros sem. Curabitur nec dolor felis. Phasellus leo nisl,
+                     aliquet et massa a, semper commodo nibh. Nunc finibus dui tristique sodales mattis. 
+                     Quisque tristique euismod laoreet. Maecenas vitae facilisis felis.
+                    </p>
             </div>
             <div class = "profile-section">
                     <h2>Contacts</h2>
