--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <ul class="name-job-list">
                                     <li>Student</li>
                                     <li>Developer</li>
-                                    <li>Holy Shit</li>
+                                    <li>Join Kesa</li>
                                     <li>Student</li>
                         </ul>
                     </div>
