--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <ul class="name-job-list">
                                     <li>Student</li>
                                     <li>Developer</li>
-                                    <li>Join Kesa</li>
+                                    <li>Photographer</li>
                                     <li>Student</li>
                         </ul>
                     </div>
@@ -42,31 +42,38 @@
                 <ul>
                     <li class = "intro">
                         <h3>University of Texas at Austin, 2019-2023</h3>
-                        <h4>Electrical/Computer Engineering</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed leo porttitor, 
-                            placerat lacus at, ornare est. Cras placerat, nulla ut elementum mollis, quam metus suscipit risus, 
-                            eu faucibus mauris nulla et dui. In at eros sem. Curabitur nec dolor felis. Phasellus leo nisl,
-                             aliquet et massa a, semper commodo nibh. Nunc finibus dui tristique sodales mattis. 
-                             Quisque tristique euismod laoreet. Maecenas vitae facilisis felis.</p>
+                        <h4 class="edu">Bachelor of Science in Computer Engineering</h4>
+                        <br>
+                        <h3>Relevent Coursework</h3>
+                        <ul class ="course">
+                            <li>Computing</li>
+                            <li>Embedded Systems</li>
+                            <li>Electrical Engineering</li>
+                        </ul>
                     </li>
                 </ul>
                 
             </div>
             <div class = "profile-section">
                     <h2>Work Experience/Skills</h2>
+
                     <ul class = "graph">
-                        <li data-score = "80%"></span><h3>Java<h3></li>
-                        <li data-score = "80%"></span><h3>HTML+CSS<h3></li>                  
+                        <li data-score = "90%"></span><h3>HTML+CSS<h3></li> 
+                        <li data-score = "80%"></span><h3>Java<h3></li>                 
                         <li data-score = "70%"></span><h3>Assembly<h3></li>
+                        <li data-score = "70%"></span><h3>C<h3></li>
                         <li data-score = "60%"></span><h3>Javascript<h3></li>
+                        <li data-score = "50%"></span><h3>Ruby on Rails<h3></li>
+
+
                     </ul>
-                    <p>
-                        orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed leo porttitor, 
-                    placerat lacus at, ornare est. Cras placerat, nulla ut elementum mollis, quam metus suscipit risus, 
-                    eu faucibus mauris nulla et dui. In at eros sem. Curabitur nec dolor felis. Phasellus leo nisl,
-                     aliquet et massa a, semper commodo nibh. Nunc finibus dui tristique sodales mattis. 
-                     Quisque tristique euismod laoreet. Maecenas vitae facilisis felis.
-                    </p>
+                    
+                    <ul class = "activity">
+                        <li><h3>Kesa : Korean Engineering Student Association</h3></li>
+                        <h4>Project Leader, 2019-2020</h4>
+                        <h4>Led a web coding class, teaching a group of students HTML+CSS and Javascript to build their own websites.</h4>
+
+                    </ul>
             </div>
             <div class = "profile-section">
                     <h2>Contacts</h2>
