--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
                     <ul class = "activity">
                         <li><h3>Kesa : Korean Engineering Student Association</h3></li>
                         <h4>Project Leader, 2019-2020</h4>
-                        <h4>Led a web coding class, teaching a group of students HTML+CSS and Javascript to build their own websites.</h4>
-
+                        <h4>what I did as a project leader</h4>
+                        <br>
+                        <h4>Group Project : CRUD Website</h4>
+                        <h4>What I did in this project</h4>
                     </ul>
+
             </div>
             <div class = "profile-section">
                     <h2>Contacts</h2>
