--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </ul>
 
                 <h3 class = experience>Hackathon - Programming club</h3>
-                <h4 class ="title">Founding Member, Team Captain</h4>
+                <h4 class ="title">Founding Member</h4>
                 <h4 class ="year">08/2018 – 05/2019</h4>
                 <ul class ="description">
                     <li>Launched Hackathon at McNeil High School with four other founding members </li>
