--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <div class = "name-job">
                         <ul class="name-job-list">
                                     <li>Student</li>
-                                    <li>Developer</li>
-                                    <li>Photographer</li>
+                                    <li>Designer</li>
+                                    <li>Engineer</li>
                                     <li>Student</li>
                         </ul>
                     </div>
@@ -27,7 +27,8 @@
 
                 </div>
                 <p class="myself">Second-year Computer Engineering student at<br> The University of Texas at Austin. <br><br>
-                    I am interested in software development with various side projects.</p>
+                    </p>
+                    <span class = "title">Incoming SDE Intern @ Amazon</span>
                 
                      <div class="icons">
                          <a class="linkedin" href="https://www.linkedin.com/in/joonha-park/">LinkedIn</a>
