--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <p class="myself">Second-year Computer Engineering student at<br> The University of Texas at Austin. <br><br>
                     </p>
-                    <span class = "title">Incoming SDE Intern @ Amazon</span>
+                    <span class = "title">Incoming SDE Intern @ <a class = "company" href = "https://amazon.com">Amazon</a></span>
                 
                      <div class="icons">
                          <a class="linkedin" href="https://www.linkedin.com/in/joonha-park/">LinkedIn</a>
